--- a/app/less/style.less
+++ b/app/less/style.less
@@ -1,4 +1,5 @@
-@var1: #000000;
+@import "colors.less";
+@import "var";
 
 *, *:before, *:after {
 	box-sizing: border-box;
@@ -10,17 +11,17 @@ html, body {
 	overflow: hidden;
 }
 body {
-	background: linear-gradient(45deg, #e10522 0%, rgba(225, 5, 34, 0) 70%), linear-gradient(135deg, #3105d1 10%, rgba(49, 5, 209, 0) 80%), linear-gradient(225deg, #0adbd8 10%, rgba(10, 219, 216, 0) 80%), linear-gradient(315deg, #09f505 100%, rgba(9, 245, 5, 0) 70%);
+	background-color: #242424;
 }
-.absolute-center, .menu, .menu .btn .fa, .menu .btn.trigger .line {
+.absolute-center, .menu, .menu .btn .fa {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
 }
 .menu {
-	width: 5em;
-	height: 5em;
+	width: 3.5em;
+	height: 3.5em;
 	.btn {
 		position: absolute;
 		top: 0;
@@ -28,19 +29,12 @@ body {
 		width: 100%;
 		height: 100%;
 		border-radius: 50%;
-		background: rgba(255, 255, 255, 0.15);
+		background: rgba(255, 255, 255, 0.8);
 		opacity: 0;
 		z-index: -10;
 		cursor: pointer;
 		transition: opacity 1s, z-index 0.3s, transform 1s;
 		transform: translateX(0);
-		.fa {
-			font-size: 3em;
-			transition: color 0.3s;
-		}
-		&:hover .fa {
-			color: rgba(255, 255, 255, 0.7);
-		}
 		&.trigger {
 			opacity: 1;
 			z-index: 100;
@@ -48,38 +42,6 @@ body {
 			transition: transform 0.3s;
 			&:hover {
 				transform: scale(1.2);
-				.line {
-					background-color: rgba(255, 255, 255, 0.7);
-					&:before, &:after {
-						background-color: rgba(255, 255, 255, 0.7);
-					}
-				}
-			}
-			.line {
-				width: 60%;
-				height: 6px;
-				background: @var1;
-				border-radius: 6px;
-				transition: background-color 0.3s, height 0.3s, top 0.3s;
-				&:before, &:after {
-					content: "";
-					display: block;
-					position: absolute;
-					left: 0;
-					width: 100%;
-					height: 6px;
-					background: @var1;
-					border-radius: 6px;
-					transition: background-color 0.3s, transform 0.3s;
-				}
-				&:before {
-					top: -12px;
-					transform-origin: 15% 100%;
-				}
-				&:after {
-					top: 12px;
-					transform-origin: 25% 30%;
-				}
 			}
 		}
 	}
@@ -95,41 +57,29 @@ body {
 		opacity: 1;
 		z-index: 50;
 	}
-	&.active .trigger .line {
-		height: 0px;
-		top: 45%;
-		&:before {
-			transform: rotate(45deg);
-			width: 110%;
-		}
-		&:after {
-			transform: rotate(-45deg);
-			width: 110%;
-		}
-	}
 	&.active .rotater:nth-child(1) .btn-icon {
-		transform: translateY(-10em) rotate(22.5deg);
+		transform: translateY(@length) rotate(22.5deg);
 	}
 	&.active .rotater:nth-child(2) .btn-icon {
-		transform: translateY(-10em) rotate(-22.5deg);
+		transform: translateY(@length) rotate(-22.5deg);
 	}
 	&.active .rotater:nth-child(3) .btn-icon {
-		transform: translateY(-10em) rotate(-67.5deg);
+		transform: translateY(@length) rotate(-67.5deg);
 	}
 	&.active .rotater:nth-child(4) .btn-icon {
-		transform: translateY(-10em) rotate(-112.5deg);
+		transform: translateY(@length) rotate(-112.5deg);
 	}
 	&.active .rotater:nth-child(5) .btn-icon {
-		transform: translateY(-10em) rotate(-157.5deg);
+		transform: translateY(@length) rotate(-157.5deg);
 	}
 	&.active .rotater:nth-child(6) .btn-icon {
-		transform: translateY(-10em) rotate(-202.5deg);
+		transform: translateY(@length) rotate(-202.5deg);
 	}
 	&.active .rotater:nth-child(7) .btn-icon {
-		transform: translateY(-10em) rotate(-247.5deg);
+		transform: translateY(@length) rotate(-247.5deg);
 	}
 	&.active .rotater:nth-child(8) .btn-icon {
-		transform: translateY(-10em) rotate(-292.5deg);
+		transform: translateY(@length) rotate(-292.5deg);
 	}
 }
 .rotater:nth-child(1) {
@@ -155,4 +105,38 @@ body {
 }
 .rotater:nth-child(8) {
 	transform: rotate(292.5deg);
+}
+
+// Шестигранник
+
+.hexagon {
+    width: 100px;
+    height: 55px;
+    background: #fc5e5e;
+    position: relative;
+    margin: 10px auto;
+}
+
+.hexagon:before {
+    content: '';
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: -25px;
+    left: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-bottom: 25px solid #fc5e5e;
+}
+
+.hexagon:after {
+    content: '';
+    width: 0;
+    height: 0;
+    position: absolute;
+    bottom: -25px;
+    left: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-top: 25px solid #fc5e5e;
 }
