--- a/app/less/style.less
+++ b/app/less/style.less
@@ -1,141 +1,106 @@
 @import "colors.less";
-@import "var";
+@import "fonts.less";
 
-*, *:before, *:after {
+body {
+	background-color: @background-def;
+	background-image: url(../img/BackSpace.jpg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center center;
+	background-size: cover;
+	font-family: 'Bebas Neue';
+}
+
+.wrapper {
+	position: relative;
+	max-width: 1600px;
+	height: 100vh;
+	margin: 0 auto;
+}
+
+.wrapper::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: @black-light;
+}
+
+.head {
+	height: 100px;
+	padding: 25px;
 	box-sizing: border-box;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: @black-light;
+}
+
+.head-wrapper {
 	margin: 0;
 	padding: 0;
+	display: flex;
+	align-items: center;
 }
-html, body {
-	height: 100%;
-	overflow: hidden;
-}
-body {
-	background-color: #242424;
-}
-.absolute-center, .menu, .menu .btn .fa {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translateX(-50%) translateY(-50%);
-}
-.menu {
-	width: 3.5em;
-	height: 3.5em;
-	.btn {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		border-radius: 50%;
-		background: rgba(255, 255, 255, 0.8);
-		opacity: 0;
-		z-index: -10;
-		cursor: pointer;
-		transition: opacity 1s, z-index 0.3s, transform 1s;
-		transform: translateX(0);
-		&.trigger {
-			opacity: 1;
-			z-index: 100;
-			cursor: pointer;
-			transition: transform 0.3s;
-			&:hover {
-				transform: scale(1.2);
-			}
-		}
-	}
-	.rotater {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		transform-origin: 50% 50%;
-	}
-	&.active .btn-icon {
-		opacity: 1;
-		z-index: 50;
-	}
-	&.active .rotater:nth-child(1) .btn-icon {
-		transform: translateY(@length) rotate(22.5deg);
-	}
-	&.active .rotater:nth-child(2) .btn-icon {
-		transform: translateY(@length) rotate(-22.5deg);
-	}
-	&.active .rotater:nth-child(3) .btn-icon {
-		transform: translateY(@length) rotate(-67.5deg);
-	}
-	&.active .rotater:nth-child(4) .btn-icon {
-		transform: translateY(@length) rotate(-112.5deg);
-	}
-	&.active .rotater:nth-child(5) .btn-icon {
-		transform: translateY(@length) rotate(-157.5deg);
-	}
-	&.active .rotater:nth-child(6) .btn-icon {
-		transform: translateY(@length) rotate(-202.5deg);
-	}
-	&.active .rotater:nth-child(7) .btn-icon {
-		transform: translateY(@length) rotate(-247.5deg);
-	}
-	&.active .rotater:nth-child(8) .btn-icon {
-		transform: translateY(@length) rotate(-292.5deg);
-	}
-}
-.rotater:nth-child(1) {
-	transform: rotate(-22.5deg);
-}
-.rotater:nth-child(2) {
-	transform: rotate(22.5deg);
-}
-.rotater:nth-child(3) {
-	transform: rotate(67.5deg);
-}
-.rotater:nth-child(4) {
-	transform: rotate(112.5deg);
-}
-.rotater:nth-child(5) {
-	transform: rotate(157.5deg);
-}
-.rotater:nth-child(6) {
-	transform: rotate(202.5deg);
-}
-.rotater:nth-child(7) {
-	transform: rotate(247.5deg);
-}
-.rotater:nth-child(8) {
-	transform: rotate(292.5deg);
-}
-// Шестигранник
 
-// .hexagon {
-//     width: 100px;
-//     height: 55px;
-//     background: #fc5e5e;
-//     position: relative;
-//     margin: 10px auto;
-// }
+.head-brand {
+	display: block;
+	height: 50px;
+	margin-right: 25px;
+	box-sizing: border-box;
+	text-decoration: none;
+	z-index: 2;
+	transition: transform ease 0.5s, border ease 0.5s;
+	&:hover {
+		transform: scale(1.05);
+	}
+}
 
-// .hexagon:before {
-//     content: '';
-//     width: 0;
-//     height: 0;
-//     position: absolute;
-//     top: -25px;
-//     left: 0;
-//     border-left: 50px solid transparent;
-//     border-right: 50px solid transparent;
-//     border-bottom: 25px solid #fc5e5e;
-// }
+.head-title {
+	width: 384px;
+	margin: 0;
+	padding: 0;
+	font-size: 24px;
+	font-weight: 400;
+	line-height: 30px;
+	letter-spacing: 0.07em;
+	text-transform: uppercase;
+	color: @white;
+	z-index: 2;
+}
 
-// .hexagon:after {
-//     content: '';
-//     width: 0;
-//     height: 0;
-//     position: absolute;
-//     bottom: -25px;
-//     left: 0;
-//     border-left: 50px solid transparent;
-//     border-right: 50px solid transparent;
-//     border-top: 25px solid #fc5e5e;
-// }
+.head-nav {
+	z-index: 2;
+}
+
+.head-nav-list {
+	margin: 0;
+	padding: 0;
+	display: flex;
+	list-style: none;
+	font-size: 24px;
+	font-weight: 400;
+	line-height: 30px;
+	letter-spacing: 0.07em;
+	text-transform: uppercase;
+}
+
+.head-nav-item {
+	margin-left: 30px;
+	&:first-child {
+		margin: 0;
+	}
+}
+
+.head-nav-link {
+	display: block;
+	text-decoration: none;
+	color: @white;
+	transition: color ease 0.5s, transform ease 0.5s;
+	&:hover {
+		transform: scale(1.1);
+		color: @hover-link;
+	}
+}
