--- a/app/less/colors.less
+++ b/app/less/colors.less
@@ -1,4 +1,8 @@
 @background-def: #215790;
-@black-light: rgba(0, 0, 0, 0.5);
+@black: #000000;
 @white: #ffffff;
-@hover-link: #189DBD;
+@black-dark: rgba(0, 0, 0, 0.5);
+@black-light: rgba(0, 0, 0, 0.3);
+@black-light-link: rgba(0, 0, 0, 0.7);
+@white-light-link: rgba(255, 255, 255, 0.7);
+@hover-link: rgba(30, 255, 0, 0.7);
