--- a/app/less/style.less
+++ b/app/less/style.less
@@ -13,7 +13,7 @@ body {
 
 .wrapper {
   position: relative;
-  max-width: 1600px;
+  width: 100vw;
   height: 100vh;
   margin: 0 auto;
 }
@@ -26,6 +26,7 @@ body {
   bottom: 0;
   left: 0;
   background-color: @black-light;
+  z-index: -1;
 }
 
 .head {
@@ -35,7 +36,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: @black-light;
+  background-color: @black-dark;
 }
 
 .head-wrapper {
@@ -52,10 +53,9 @@ body {
   box-sizing: border-box;
   text-decoration: none;
   outline: none;
-  z-index: 2;
-  transition: transform ease 0.5s, border ease 0.5s;
+  transition: transform ease 0.5s;
   &:hover {
-    transform: scale(1.05);
+    transform: scale(1.1);
   }
 }
 
@@ -69,11 +69,6 @@ body {
   letter-spacing: 0.07em;
   text-transform: uppercase;
   color: @white;
-  z-index: 2;
-}
-
-.head-nav {
-  z-index: 2;
 }
 
 .head-nav-list {
@@ -100,12 +95,51 @@ body {
   text-decoration: none;
   outline: none;
   color: @white;
-  transition: color ease 0.5s, transform ease 0.5s;
+  transition: color ease 1s, transform ease 0.5s;
   &:hover {
     transform: scale(1.1);
     color: @hover-link;
   }
 }
+
+.main {
+  max-width: 1200px;
+  padding: 25px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  /*border: 2px dashed @white;*/
+}
+
+.main-icon {
+  transition: transform ease 1s;
+  &-hex {
+    transition: fill ease 1s, stroke ease 0.5s;
+  }
+  &-content {
+    transition: fill ease 1s;
+  }
+  &:hover {
+    transform: scale(1.1);
+  }
+  &:hover .main-icon-hex {
+    fill: @black-light-link;
+    stroke:@white-light-link;
+  }
+  &:hover .main-icon-content {
+    fill: @white-light-link;
+  }
+}
+
+.main-icon-hex {
+  fill: @white-light-link;
+  stroke:@black;
+  stroke-width: 2px;
+}
+
+.main-icon-content {
+  fill: @black;
+}
+
 
 .foot {
   display: block;
@@ -113,7 +147,6 @@ body {
   left: 0;
   bottom: 0;
   padding: 25px;
-  z-index: 2;
 }
 
 .foot-niac-link {
@@ -121,7 +154,7 @@ body {
   align-items: center;
   text-decoration: none;
   outline: none;
-  transition: transform ease 1s;
+  transition: transform ease 0.5s;
   &:hover {
     transform: scale(1.1);
   }
@@ -149,10 +182,11 @@ body {
 .foot-niac-text {
   display: block;
   margin: 0 0 0 15px;
+  font-family: 'Century Gothic';
   font-size: 14px;
   font-weight: 400;
   line-height: 14px;
-  letter-spacing: 0.13em;
+  letter-spacing: 0.08em;
   text-transform: uppercase;
   color: @white;
   transition: color ease 0.5s;
