--- a/app/less/style.less
+++ b/app/less/style.less
@@ -25,7 +25,7 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: @black-light;
+  background-color: @black-dark;
   z-index: -1;
 }
 
@@ -158,10 +158,10 @@ body {
   &:hover {
     transform: scale(1.1);
   }
-  &:hover .logo-niac-icon {
+  &:hover .foot-niac-icon {
     fill: @hover-link;
   }
-  &:hover .logo-niac-icon-text {
+  &:hover .foot-niac-icon-text {
     fill: @hover-link;
   }
   &:hover .foot-niac-text {
@@ -169,12 +169,12 @@ body {
   }
 }
 
-.logo-niac-icon {
+.foot-niac-icon {
   fill: @white;
   transition: fill ease 0.5s;
 }
 
-.logo-niac-icon-text {
+.foot-niac-icon-text {
   fill: @white;
   transition: fill ease 0.5s;
 }
