Добавлены значки категорий

--- a/app/less/colors.less
+++ b/app/less/colors.less
@@ -5,4 +5,4 @@
 @black-light: rgba(0, 0, 0, 0.3);
 @black-light-link: rgba(0, 0, 0, 0.7);
 @white-light-link: rgba(255, 255, 255, 0.7);
-@hover-link: rgba(30, 255, 0, 0.7);
+@hover-link: #6293C8;
