--- a/app/less/style.less
+++ b/app/less/style.less
@@ -11,6 +11,86 @@ body {
   background-position: center center;
   background-size: cover;
   font-family: 'Bebas Neue';
+  letter-spacing: 0.07em;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+  &-info {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    max-width: 80%;
+    padding: 70px;
+    box-sizing: border-box;
+    border: 1px solid @black;
+    border-radius: 5px;
+    background-color: @black-modal;
+    &-close {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      width: 35px;
+      height: 35px;
+      &-left, &-right{
+        height: 5px;
+        background-color: @white;
+      }
+      &-left {
+        width: 127%;
+        transform-origin: 0% 0%;
+        transform: rotate(45deg);
+        transition: background-color ease 0.5s;
+      }
+      &-right {
+        width: 127%;
+        transform-origin: 0% 100%;
+        transform: rotate(-45deg);
+        transition: background-color ease 0.5s;
+      }
+      &:hover {
+        cursor: pointer;
+      }
+      &:hover .modal-info-close-left{
+        background-color:@hover-link;
+      }
+      &:hover .modal-info-close-right{
+        background-color: @hover-link;
+      }
+    }
+    &-list {
+      padding: 0;
+      &-item {
+        list-style-type: none;
+      }
+    }
+    &-link {
+      text-decoration: none;
+      font-size: 24px;
+      line-height: 45px;
+      color: @white;
+      transition: color ease 0.5s;
+      &:hover {
+        color: @hover-link;
+      }
+    }
+  }
+  &-active {
+    display: flex;
+  }
 }
 
 .wrapper {
@@ -67,42 +147,84 @@ body {
     font-size: 24px;
     font-weight: 400;
     line-height: 30px;
-    letter-spacing: 0.07em;
     text-transform: uppercase;
     color: @white;
   }
-  &-nav-list {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 0.07em;
-    text-transform: uppercase;
-  }
-  &-nav-item {
-    margin: 0 0 0 10px;
-    &:first-child {
+  &-nav {
+    &-list {
       margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      list-style: none;
+      font-size: 24px;
+      font-weight: 400;
+      line-height: 30px;
+      text-transform: uppercase;
     }
-  }
-  &-nav-link {
-    display: block;
-    padding: 10px;
-    border-radius: 3px;
-    text-decoration: none;
-    outline: none;
-    color: @white;
-    transition: color ease 0.5s, background-color ease 0.5s;
-    &:hover {
-      color: @black;
-      background-color: @white-light-link;
+    &-item {
+      margin: 0 0 0 10px;
+      &:first-child {
+        margin: 0;
+      }
     }
+    &-link {
+      display: block;
+      padding: 10px;
+      border-radius: 3px;
+      text-decoration: none;
+      outline: none;
+      color: @white;
+      transition: color ease 0.5s, background-color ease 0.5s;
+      &:hover {
+        color: @black;
+        background-color: @white-light-link;
+      }
+    }
+
   }
+}
+
+.burger-menu {
+  display: none;
+  width: 35px;
+  height: 35px;
+  z-index: 2;
+}
+
+.burger-menu-top, .burger-menu-center, .burger-menu-bottom {
+  width: 100%;
+  height: 5px;
+  background-color: @white;
+}
+
+.burger-menu-top {
+  transform-origin: 0% 0%;
+  transition: transform ease 0.5s;
+}
+
+.burger-menu-center {
+  transition: transform ease 0.5s;
+}
+
+.burger-menu-bottom {
+  transform-origin: 0% 100%;
+  transition: transform ease 0.5s;
+}
+
+.burger-menu-top-active {
+  width: 127.5%;
+  transform: rotate(45deg);
+}
+
+.burger-menu-center-active {
+  transform: translateX(150px);
+}
+
+.burger-menu-bottom-active {
+  width: 127.5%;
+  transform: rotate(-45deg);
 }
 
 .main {
@@ -208,7 +330,7 @@ body {
 }
 
 .hexTitle {
-  margin: 55% 4% 0 4%;
+  margin: 52% 4% 0 4%;
   font-weight: 900;
   font-size: 99%;
   letter-spacing: 0.12rem;
@@ -249,3 +371,7 @@ body {
 }
 
 @import "media.less";
+
+.head-nav-active {
+  display: block;
+}
