--- a/app/less/style.less
+++ b/app/less/style.less
@@ -31,7 +31,7 @@ body {
     justify-content: center;
     align-items: flex-start;
     max-width: 80%;
-    padding: 70px;
+    padding: 55px 40px 40px 40px;
     box-sizing: border-box;
     border: 1px solid @black;
     border-radius: 5px;
@@ -43,20 +43,20 @@ body {
       position: absolute;
       top: 15px;
       right: 15px;
-      width: 35px;
-      height: 35px;
+      width: 25px;
+      height: 25px;
       &-left, &-right{
         height: 5px;
         background-color: @white;
       }
       &-left {
-        width: 127%;
+        width: 121%;
         transform-origin: 0% 0%;
         transform: rotate(45deg);
         transition: background-color ease 0.5s;
       }
       &-right {
-        width: 127%;
+        width: 121%;
         transform-origin: 0% 100%;
         transform: rotate(-45deg);
         transition: background-color ease 0.5s;
@@ -72,6 +72,7 @@ body {
       }
     }
     &-list {
+      margin: 0;
       padding: 0;
       &-item {
         list-style-type: none;
