--- a/app/less/style.less
+++ b/app/less/style.less
@@ -31,32 +31,35 @@ body {
     justify-content: center;
     align-items: flex-start;
     max-width: 80%;
-    padding: 55px 40px 40px 40px;
+    max-height: 95%;
+    padding: 40px 30px 30px 30px;
     box-sizing: border-box;
     border: 1px solid @black;
-    border-radius: 5px;
+    border-radius: 3px;
     background-color: @black-modal;
+    overflow: hidden;
     &-close {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       position: absolute;
-      top: 15px;
-      right: 15px;
-      width: 25px;
-      height: 25px;
+      top: 7px;
+      right: 7px;
+      width: 20px;
+      height: 20px;
+      z-index: 4;
       &-left, &-right{
         height: 5px;
         background-color: @white;
       }
       &-left {
-        width: 121%;
+        width: 116%;
         transform-origin: 0% 0%;
         transform: rotate(45deg);
         transition: background-color ease 0.5s;
       }
       &-right {
-        width: 121%;
+        width: 116%;
         transform-origin: 0% 100%;
         transform: rotate(-45deg);
         transition: background-color ease 0.5s;
@@ -105,7 +108,7 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.3);
     z-index: -1;
   }
 }
@@ -355,10 +358,10 @@ body {
       transform: scale(1.1);
     }
     &:hover .foot-niac-icon {
-      fill: @white-light-link;
+      fill: @hover-link;
     }
     &:hover .foot-niac-icon-text {
-      fill: @white-light-link;
+      fill: @hover-link;
     }
   }
   &-niac-icon {
@@ -368,6 +371,44 @@ body {
   &-niac-icon-text {
     fill: @white;
     transition: fill ease 0.5s;
+  }
+}
+
+.about-wrapper {
+  max-width: 600px;
+  height: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+.about-tiltle {
+  display: block;
+  margin: 0 0 25px 0;
+  text-align: center;
+  color: @white;
+  font-size: 30px;
+}
+
+.about-list {
+  margin: 0;
+  color: @white;
+  font-size: 18px;
+  letter-spacing: 1.7px;
+  &-item {
+    margin-bottom: 15px;
+    &:last-child {
+      margin: 0;
+    }
+  }
+}
+
+.aboutLink {
+  color: @white;
+  text-decoration: none;
+  transition: color ease 0.5s;
+  &:hover {
+    color: @hover-link;
   }
 }
 
