--- a/app/less/colors.less
+++ b/app/less/colors.less
@@ -7,3 +7,4 @@
 @black-modal: rgba(0, 0, 0, 0.9);
 @white-light-link: rgba(255, 255, 255, 0.7);
 @hover-link: #6293C8;
+@link-active: rgba(98, 147, 200, 0.8);
